# ai-company-os

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NORTH_STAR.md  README.md  README.zh-CN.md  SECURITY.md  STATUS.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: ci.yml
config/: personas.example.json  projects.example.json
docs/agent/: 00-how-to-read-this-repo.md  01-development-workflow.md  02-coding-standards.md  03-design-patterns.md  04-java-best-practices.md  05-python-best-practices.md  06-testing-guide.md  07-deployment-guide.md  08-self-update-protocol.md  09-github-release-ops.md  adapter-authoring.md
docs/architecture/: a2a-memory-fabric.md  adapter-protocol.md  aico-concepts-workflow.drawio  aico-layered-architecture.drawio  boss-first-grounding.md  overview.md  plugin-system.md  product-entrypoints.md  project-assignment-layer.md
docs/contributors/: quickstart.md
docs/decisions/: 0001-tech-stack-selection.md  0002-adapter-channel-protocol.md  0003-phase-3-persona-broadcast.md  0004-persona-external-configuration.md  0005-phase-4-approval-audit.md  0006-approval-permission-policy.md  0007-remote-approval-adapter-boundary.md  0008-audit-jsonl-persistence.md  0009-phase-5-collaboration-protocol.md  0010-agent-session-harness-boundary.md  0011-project-assignment-layer.md  0012-boss-facing-team-commands.md  0013-platform-neutral-im-render-contract.md  0014-phase-6-observability-scope.md  0015-observability-event-replay.md  0016-status-island-and-usage-boundary.md  0017-optional-agent-adapters.md  0018-full-agent-adapters-and-feishu-channel.md  0019-role-scope-vocabulary.md  0020-phase-7-shared-memory-scope.md  0021-agent-driven-memory-ownership.md  0022-a2a-memory-fabric.md  0023-memory-semantic-retrieval.md  0024-phase-8-offline-delegation-scope.md  0025-goal-mode-orchestration.md  0026-lead-decision-team-contract.md  0027-memory-purpose-tags.md  0028-sqlite-task-state-store.md  0029-phase-8-absence-loop.md  0030-unified-event-index.md  0031-experience-as-injectable-memory.md  0032-undo-why-scope-boundary.md  0033-aico-view-readonly-web.md  0035-aico-view-token-auth.md  (+3 more)
(+198 files in other folders)
