[project]
name = "aico"
version = "0.1.0"
description = "AI Company OS orchestration core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "uvicorn>=0.29",
]

[project.scripts]
aico-feishu-webhook = "aico.app.feishu_webhook:main"
aico-github-social-preview = "aico.app.social_preview_cli:main"
aico-glance = "aico.app.glance_cli:main"
aico-metrics = "aico.app.metrics_cli:main"
aico-phase1 = "aico.app.phase1:main"
aico-release-room-demo = "aico.app.release_room_demo:main"
aico-state = "aico.app.state_cli:main"
aico-view = "aico.app.view_cli:main"

[dependency-groups]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aico"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["src", "tests"]
